# agentstack-openclaw

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/openclaw_agent/: agent.py
